Add Cargo config using my libpnet fork

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 authors = ["Manuel Landesfeind <manuel@landesfeind.de>"]
 
 [dependencies]
-pnet = { path = "../libpnet" }
+#pnet = "*"
+pnet = { git = "https://github.com/landesfeind/libpnet" }
 clap = "*"
